--- a/Kasa/src/styles/Header.scss
+++ b/Kasa/src/styles/Header.scss
@@ -31,7 +31,7 @@ header{
     margin-top: 32px;
     align-items: center;
     justify-content: flex-end;
-    width: 30%;
+    width: 49%;
     gap: 22%;
     font-weight: 500;
     font-size: 24px;
